--- a/SitecoreCDPSln/src/Feature/Components/code/Views/CDPPIM/Index.cshtml
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/CDPPIM/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<br />
 <br />
 <button id="btnConfirmProductInCart" type="button" class="btn btn-info">Cart Confirmed</button>
-<div class="card" style="width: 18rem;">
+<div class="card" style="padding:5px; width: 100%;">
     @Html.Sitecore().Field("image")
     <div class="card-body">
         <h5 class="card-title"><input type="text" id="ProductTitle" value='@Html.Sitecore().Field("name")' /></h5>
